part3/e9/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql-ss
  namespace: mainapp-ns
spec:
  serviceName: pgsql
  replicas: 1
  selector:
    matchLabels:
      app: pgapp
  template:
    metadata:
      labels:
        app: pgapp
    spec:
      containers:
        - name: postgres
          image: postgres:12
          resources:
            limits:
              cpu: "100m"
              memory: "80Mi"            
          ports:
            - name: pgsql
              containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p3e09-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p3e09-pong
  template:
    metadata:
      labels:
        app: p3e09-pong
    spec:
      containers:
        - name: p3e09-pong-container
          image: mcfizh/dwk-part1:p2e07-pong
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p3e09-main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p3e09-main
  template:
    metadata:
      labels:
        app: p3e09-main
    spec:
      volumes:
        - name: shared
          emptyDir: {}
      containers:
        - name: p3e09-main-a
          image: mcfizh/dwk-part1:p2e07-main-a
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"            
          volumeMounts:
            - name: shared
              mountPath: /shared
        - name: p3e09-main-b
          image: mcfizh/dwk-part1:p2e07-main-b
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"            
          volumeMounts:
            - name: shared
              mountPath: /shared
